# MyBlogSource

./: .gitignore  contact.markdown  dhanesh.cabal  index.html
posts/: 2015-12-27-by-design.markdown
src/: Main.hs
templates/: content.html  default.html
